# grpc-gateway

./: .gitmodules  CMakeLists.txt  README.md
proto/: echo_service.proto
src/: GrpcGateway.cpp  Http2Wrapper.h
